# freesearchx

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
references/: cli.md  workflow.md
scripts/: freesearchx.py
tests/: test_freesearchx.py
